Layout Issues Fixation

--- a/style/style.css
+++ b/style/style.css
@@ -319,7 +319,14 @@ nav .mdi-menu {
 nav .active {
   color: #e31b6d;
 }
-
+.custom-row {
+  display: flex;
+  
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-between;
+}
 .carousel-wrap {
   height: 250px;
   margin: 0 auto;
@@ -995,12 +1002,18 @@ footer .footnote .highlight {
   font-family: "Open Sans";
 }
 
+@media screen and (max-width: 660px) {
+  .custom-row {
+    display: block;
+  }
+}
 @media screen and (max-width: 400px) {
   section:nth-of-type(3) #gallery .mix .card {
     width: 100vw;
   }
 }
 @media screen and (min-width: 600px) {
+
   body {
     font-size: 12pt;
   }
